--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
@@ -1,88 +1,65 @@
   <div>
-    <p style="text-align:center"><span class="about-text"><strong><u>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</u></strong></span></p>
+  <p style="text-align:center"><strong><u>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</u></strong></p>
 
-    <p>&nbsp;</p>
+  <ol>
+    <li>
+      Поиски, оценка и разведка месторождений твердых полезных ископаемых, включая:
+      <ol>
+        <li>разработка проектно-сметной документации;</li>
+        <li>проведение поисков, оценки и разведки месторождений полезных ископаемых;</li>
+        <li>разработка кондиций к подсчету запасов полезных ископаемых;</li>
+        <li>подсчет и защита запасов в ТКЗ и в ГКЗ России;</li>
+      </ol>
+    </li>
+    <li>
+      Инженерно-геологические изыскания для строительства объектов гражданского и промышленного строительства, в том числе высокого уровня ответственности, включая:
+      <ol>
+        <li>инженерно-геологическая и гидрогеологическая съемки;</li>
+        <li>
+          полевые определения физико-механических свойств грунтов, в том числе:
+          <ol>- штамповые испытания грунтов (в том числе горячими штампами);</ol>
+          <ol>- прессиометрические испытания грунтов;</ol>
+          <ol>- определение прочностных характеристик грунтов;</ol>
+          <ol>- статистическое и динамическое зондирование грунтов;</ol>
+          <ol>- испытания грунтов сваями.</ol>
+        </li>
+        <li>гидрогеологические исследования:</li>
+        <li>
+          кустовые, одиночные, групповые, <q>экспресс</q>- откачки воды из скважин, в том числе:
+          <ol>- опытные выпуски воды из фонтанирующих скважин;</ol>
+          <ol>- опытные наливы воды в скважины и шурфы;</ol>
+          <ol>-  опытные нагнетания воды в скважины, в том числе с использованием оригинальных тампонов разжимного действия, с использование двойного пневмотампона;</ol>
+        </li>
+        <li>Лабораторные исследования грунтов</li>
+      </ol>
+    </li>
+    <li>
+      Бурение инженерных, геологоразведочных и гидрогеологических скважин;
+    </li>
+    <li>Поиски, оценка, разведка и подсчет запасов подземных вод;</li>
+    <li>Работы по мониторингу состояния и загрязнения окружающей природной среды;</li>
+    <li>Разработка проектов зон санитарной охраны водозаборов;</li>
+    <li>Проектирование опасных производственных объектов связанных с добычей полезных ископаемых;</li>
+    <li>Добыча полезных ископаемых.</li>
+  </ol>
 
-    <p>&nbsp;</p>
+ 
+  <p style="text-align:center"><strong><u>НАШИ ЗАКАЗЧИКИ</u></strong></p>
+  
+  <ol>
+    <li>Филиал ПАО <q>РусГидро</q> - <q>Саяно-Шушенская ГЭС</q>.</li>
+    <li>ПАО <q>Ленгидропроект</q>.</li>
+    <li>ОАО <q>Красноярская буровая компания</q>.</li>
+    <li>ООО <q>Природа-Промдобыча</q>.</li>
+    <li>ООО <q>Копыловский</q>.</li>
+    <li>ООО <q>Красный</q>.</li>
+    <li>ООО <q>Геостройсервис-с</q>.</li>
+    <li>ООО <q>Прогресс-инвест</q>.</li>
+    <li>ООО <q>Новагео</q>.</li>
+    <li>ООО <q>Аккаргинские хромиты</q>.</li>
+    <li>ПАО <q>КрасноярскТИСИЗ</q>.</li>
+    <li>ООО <q>АЛАНС</q></li>
+  </ol>
 
-    <p><span class="about-text">1.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Поиски, оценка и разведка месторождений твердых полезных ископаемых, включая:</span></p>
-
-    <p><span class="about-text">1.1.&nbsp;&nbsp; разработка проектно-сметной документации;</span></p>
-
-    <p><span class="about-text">1.2.&nbsp;&nbsp; проведение поисков, оценки и разведки месторождений полезных ископаемых;</span></p>
-
-    <p><span class="about-text">1.3.&nbsp;&nbsp; разработка кондиций к подсчету запасов полезных ископаемых;</span></p>
-
-    <p><span class="about-text">1.4.&nbsp;&nbsp; подсчет и защита запасов в ТКЗ и в ГКЗ России;</span></p>
-
-    <p><span class="about-text">2.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Инженерно-геологические изыскания для строительства объектов гражданского и промышленного строительства, в том числе высокого уровня ответственности, включая:</span></p>
-
-    <p><span class="about-text">2.1.&nbsp;&nbsp; инженерно-геологическая и гидрогеологическая съемки;</span></p>
-
-    <p><span class="about-text">2.2.&nbsp;&nbsp; полевые определения физико-механических свойств грунтов, в том числе:</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; штамповые испытания грунтов (в том числе горячими штампами);</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; прессиометрические испытания грунтов;</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; определение прочностных характеристик грунтов;</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; статистическое и динамическое зондирование грунтов;</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; испытания грунтов сваями.</span></p>
-
-    <p><span class="about-text">2.3.&nbsp;&nbsp; гидрогеологические исследования:</span></p>
-
-    <p><span class="about-text">2.4.&nbsp;&nbsp; кустовые, одиночные, групповые, &laquo;экспресс&raquo; - откачки воды из скважин, в том числе:</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные выпуски воды из &laquo;фонтанирующих&raquo; скважин;</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные наливы воды в скважины и шурфы;</span></p>
-
-    <p><span class="about-text">-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; опытные нагнетания воды в скважины, в том числе с использованием оригинальных тампонов разжимного действия, с использование двойного пневмотампона;</span></p>
-
-    <p><span class="about-text">&nbsp;2.5.&nbsp;&nbsp;&nbsp;&nbsp; Лабораторные исследования грунтов</span>></p>
-
-    <p><span class="about-text">3.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Бурение инженерных, геологоразведочных и гидрогеологических скважин;</span></p>
-
-    <p><span class="about-text">4.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Поиски, оценка, разведка и подсчет запасов подземных вод;</span></p>
-
-    <p><span class="about-text">5.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Работы по мониторингу состояния и загрязнения окружающей природной среды;</span></p>
-
-    <p><span class="about-text">6.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Разработка проектов зон санитарной охраны водозаборов;</span></p>
-
-    <p><span class="about-text">7.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Проектирование опасных производственных объектов связанных с добычей полезных ископаемых;</span></p>
-
-    <p><span class="about-text">8.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Добыча полезных ископаемых.</span></p>
-
-    <p>&nbsp;</p>
-
-    <p><span class="about-text"><strong><u>НАШИ ЗАКАЗЧИКИ</u></strong></span></p>
-
-    <p>&nbsp;</p>
-
-    <p><span class="about-text">1.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Филиал ПАО &laquo;РусГидро&raquo;-&laquo;Саяно-Шушенская ГЭС&raquo;.</span></p>
-
-    <p><span class="about-text">2.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ПАО &laquo;Ленгидропроект&raquo;.</span></p>
-
-    <p><span class="about-text">3.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ОАО &laquo;Красноярская буровая компания&raquo;.</span></p>
-
-    <p><span class="about-text">4.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Природа-Промдобыча&raquo;.</span></p>
-
-    <p><span class="about-text">5.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Копыловский&raquo;.</span></p>
-
-    <p><span class="about-text">6.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Красный&raquo;.</span></p>
-
-    <p><span class="about-text">7.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Геостройсервис-с&raquo;.</span></p>
-
-    <p><span class="about-text">8.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Прогресс-инвест&raquo;.</span></p>
-
-    <p><span class="about-text">9.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ООО &laquo;Новагео&raquo;.</span></p>
-
-    <p><span class="about-text">10. &nbsp;&nbsp; ООО &laquo;Аккаргинские хромиты&raquo;.</span></p>
-
-    <p><span class="about-text">11. &nbsp;&nbsp; ПАО &laquo;КрасноярскТИСИЗ&raquo;.</span></p>
-
-    <p><span class="about-text">12.&nbsp;&nbsp;&nbsp; ООО &laquo;АЛАНС&raquo;</span></p>
-  </div>
+</div>
 
