--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
@@ -6,30 +6,30 @@
   <div style="text-align: center;">
     <p>&nbsp;</p>
 
-    <table border="0" cellpadding="1" cellspacing="1" style="border-collapse:collapse; margin:1px; width:500px">
+    <table>
       <tbody>
         <tr>
           <td><a class="lb2" src="../../../../../../assets/sovluk.png" style="margin: 0px; padding: 0px; color: rgb(44, 70, 148); text-decoration-line: none;"><img alt="" src="http://geotehn.ru/sites/default/files/resize/sovluk-100x152.png" style="border:0px; font-family:arial,helvetica,sans-serif; height:152px; margin:3px; width:100px" /></a></td>
           <td>
-            <span class="staff-text"><span><span><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></span></span></span>
+            <p><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></p>
 
-            <span class="staff-text"><span>Совлук Виктор Иванович</span></span>
+            <p>Совлук Виктор Иванович</p>
           </td>
         </tr>
         <tr>
           <td>&nbsp;</td>
           <td>
-            <span class="staff-text"><span><strong><span>Директор отдела инженерных изысканий</span></strong></span></span>
+            <p><strong>Директор отдела инженерных изысканий</strong></p>
 
-            <span class="staff-text"><span>Хомяков Андрей Сергеевич</span></span>
+            <p>Хомяков Андрей Сергеевич</p>
           </td>
         </tr>
         <tr>
           <td><img alt="" src="../../../../../../assets/asovluk.png" style="border:1px solid; height:152px; margin:3px; width:100px" /></td>
           <td>
-            <span class="staff-text"><span><strong><span>Директор отдела геологоразведочных работ</span></strong></span></span>
+            <p><strong>Директор отдела геологоразведочных работ</strong></p>
 
-            <span class="staff-text"><span>Совлук Александр Викторович</span></span>
+            <p>Совлук Александр Викторович</p>
           </td>
         </tr>
       </tbody>
