--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-main/about-main.component.html
@@ -1,5 +1,5 @@
   <div>
-  <p style="text-align:center"><strong><u>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</u></strong></p>
+    <h1>ОСНОВНЫЕ ВИДЫ ВЫПОЛНЯЕМЫХ РАБОТ</h1>
 
   <ol>
     <li>
@@ -44,7 +44,7 @@
   </ol>
 
  
-  <p style="text-align:center"><strong><u>НАШИ ЗАКАЗЧИКИ</u></strong></p>
+  <h1>НАШИ ЗАКАЗЧИКИ</h1>
   
   <ol>
     <li>Филиал ПАО <q>РусГидро</q> - <q>Саяно-Шушенская ГЭС</q>.</li>
