--- a/GeoApp/ClientApp/src/app/user/components/geo-services/geo-services.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/geo-services.component.html
@@ -2,7 +2,7 @@
   <mat-tab label="Экологические исследования">
     <app-eco-research></app-eco-research>
   </mat-tab>
-  <mat-tab label="Геологические исследования">
+  <mat-tab label="Геологическое изучение недр">
     <app-geo-research></app-geo-research>
   </mat-tab>
   <mat-tab label="Инженерно-геологические изыскания">
