--- a/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/geo-research/geo-research.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/geo-research/geo-research.component.html
@@ -1,3 +1,51 @@
-<p>
-  geo-research works!
-</p>
+<div>
+  <h1>ГЕОЛОГОРАЗВЕДОЧНЫЕ РАБОТЫ</h1>
+
+  <ol>
+    Мы предлагаем заказчикам все основные виды работ по геологическому изучению недр:
+    <li>Подготовка пакетов документов для обоснования инвестиций в недропользование. Разработка технико-экономических предложений (ТЭП) к конкурсам на получения лицензии на право геологического изучения месторождений и добычи твердых полезных ископаемых.</li>
+    <li>Проектирование геологоразведочных работ.</li>
+    <li>Выполнение поисковых, оценочных и разведочных работ.</li>
+    <li>Разработка ТЭО кондиций и отчетов с подсчетом запасов. Защита ТЭО т отчетов в ТКЗ и ГКЗ</li>
+    <li> Подготовка пакетов документов и разработка технико-экономических предложений (ТЭП)</li>
+    По заказу недропользователей мы осуществляем подбор объектов лицензирования (перспективные месторождения, площади с высоким ресурсным потенциалом) и разрабатываем технико-экономические обоснования инвестиций.
+
+    По условиям конкурсов мы разрабатываем технико-экономические предложения и от имени заказчика участвуем в конкурсах.
+
+    В 2014-2017 годах ООО «Геологические технологии» выиграло все конкурсы, в которых мы участвовали от имени наших заказчиков.
+  </ol>
+  <p class="fig"><img src="../../../../../../assets/geo-research/1.png" width="300"/>
+                 <img src="../../../../../../assets/geo-research/6.png" width="305" />
+  </p>
+
+  <h2> Проектирование геологоразведочных работ</h2>
+
+  <p>
+    Наше предприятие выполняет работы по проектированию геолого-поисковых, геолого-оценочных и геологоразведочных работ на все основные виды твердых полезных ископаемых.
+    Мы разрабатываем методические, экономические и экологические части проектов с учетом требований законодательства, с использованием современных технических средств и методик разведки.
+    Наши заказчики в короткие сроки получают проекты с согласованным геологическим заданиям и положительным заключением государственной экспертизы.
+  </p>
+
+  <p class="fig">
+    <img src="../../../../../../assets/geo-research/5.png" width="300" />
+    <img src="../../../../../../assets/geo-research/2.png" width="300" />
+  </p>
+
+  <h2>Поисковые, оценочные и разведочные работы</h2>
+
+  <p>
+    Наше предприятие выполняет поисковые, оценочные и разведочные работы на месторождениях всех основных видов твердых полезных ископаемых.
+    Мы используем буровые, горные и горно-буровые системы разведки, современные буровые станки и горную технику. Применяемые технологии опробования полезных ископаемых и пробоподготовки обеспечивают их высокую представительность и достоверность.
+    Все виды геологоразведочных работ сопровождаются инструментальными маркшейдерскими и топографо-геодезическими съемками.
+    При выполнении полевых и камеральных работ используется современное программное обеспечение для геологических построений и подсчета запасов (Micromine, Surpec, AutoCAD и др.).
+  </p>
+
+  <h2>Разработка ТЭО кондиций и отчетов с подсчетом запасов. Защита ТЭО т отчетов в ТКЗ и ГКЗ</h2>
+
+  <p>По заявкам заказчиков, на материалах их разведочных работ наши специалисты разрабатывают ТЭО разведочных кондиций для подсчета запасов и подготавливают отчеты с подсчетом запасов.
+     Предприятие имеет опыт защиты в ТКЗ и ГКЗ ТЭО кондиций и подсчета запасов по молибденовым, медным, золотрудным, хромитовым месторождениям полезных ископаемых, месторождениям камнесамоцветного сырья и воды.</p>
+
+  <p class="fig"><img src="../../../../../../assets/geo-research/3.png" width="345" />
+                 <img src="../../../../../../assets/geo-research/4.png" width="300" />
+                </p>
+</div>
