--- a/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/ingeneering-research/ingeneering-research.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/ingeneering-research/ingeneering-research.component.html
@@ -1,3 +1,28 @@
-<p>
-  ingeneering-research works!
-</p>
+<h1>Инженерно-геологические изыскания</h1>
+
+<ol>АО «СИБГЕОТЕХ» оказывают широкий спектр услуг в сфере инженерно-геологических изысканий для строительства, в том числе особо опасных и технически сложных объектов капитального строительства I-III уровня ответственности.
+  <li>Колонковое и шнековое бурение инженерно-геологических скважин;</li>
+  <li> Инженерно-геологическую, инженерно-геокриологическую и гидрогеологическую съемки;</li>
+  <li> Полевые и лабораторные определения физико-механических свойств грунтов, в том числе:
+    <ol>- штамповые испытания грунтов, в том числе горячими штампами;</ol>
+    <ol>- прессиометрические испытания грунтов;</ol>
+    <ol>- определение прочностных характеристик грунтов;</ol>
+    <ol>- статистическое и динамическое зондирование грунтов;</ol>
+    <ol>- испытания грунтов сваями.</ol>
+    </li>
+  <li>Гидрогеологические исследования, том числе:
+    <ol>- кустовые, одиночные, групповые, «экспресс»-откачки воды из скв.;</ol>
+    <ol>- опытные выпуски воды из «фонтанирующих» скважин;</ol>
+    <ol>- опытные наливы воды в скважины и шурфы;</ol>
+    <ol>- опытные нагнетания воды в скв, в том числе с использованием оригинальных тампонов разжимного действия, с использование двойного пневмотампона;</ol>
+    <ol>- расходометрию;</ol>
+    <ol>- резистивиметрию;</ol>
+    <ol>- индикаторные методы;</ol>
+  </li>
+  <li>Лабораторные исследования грунтов.</li>
+  </ol>
+
+<p class="fig"><img src="../../../../../../assets/ingeneering-research/1.jpg"/>
+               <img src="../../../../../../assets/ingeneering-research/3.jpg" />
+               <img src="../../../../../../assets/ingeneering-research/4.jpg" />
+  </p>
