--- a/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/surveyor-works/surveyor-works.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/surveyor-works/surveyor-works.component.html
@@ -1,3 +1,15 @@
-<p>
-  surveyor-works works!
-</p>
+<h1>Геодезические и маркшейдерские работы</h1>
+
+<ol>Наша компания выполняет все основные виды геодезических и маркшейдерских работ:
+  <li>Геодезическое обеспечение работ по строительству и ремонту автомобильных дорог.</li>
+  <li>Маркшейдерское обеспечение добычных работ, в том числе наблюдение за сдвижением бортов карьеров, отвалов и за другими опасными явлениями.</li>
+  <li>Разработка проектов маркшейдерских работ для горного производства.</li>
+  <li>Разработка горных отводов и планов развития горных работ.</li>
+  <li>Топографическая съемка участков, в том числе техногенно нарушенных земель для целей геологоразведочных и добычных работ открытым способом.</li>
+  <li>Топографическая съемка участков предназначенных для объектов гражданского и промышленного строительства, в том числе высокой ответственности.</li>
+  <li>Создание и уравнивание опорных геодезических сетей планового и высотного обоснования для топографо-геодезических работ.</li>
+  <li>Камеральная обработка результатов полевых топографо-геодезических </li>
+  </ol>
+<p class="fig"><img src="../../../../../../assets/surveyor-works/1.jpg" width="300"/>
+               <img src="../../../../../../assets/surveyor-works/3.jpg" width="300"/>
+  </p>
