add global style "text"

--- a/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/eco-research/eco-research.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/geo-services/tabs/eco-research/eco-research.component.html
@@ -1,19 +1,23 @@
-<h1>Экологические исследования</h1>
+<div class="text">
+  <h1>Экологические исследования</h1>
 
-<ol>
-  Мы выполняем следующие основные виды экологических исследований:
-  <li>Работы по исследованию фонового состояния окружающей природной среды с подготовкой и согласованием Отчета о фоновом состоянии окружающей природной среды.</li>
-  <li>Разработка программ и проектов экологического мониторинга окружающей природной среды.</li>
-  <li>Разработка экологических разделов в отчетах о результатах разведки месторождений с подсчетом запасов и ТЭО кондиций.</li>
-  <li>Разработка экологической части проектов разработки месторождений твердых полезных ископаемых.</li>
-  <li>Разработка нормативов предельно-допустимых выбросов загрязняющих веществ в атмосферный воздух, нормативов допустимых сбросов, проектов нормативов образования отходов и лимитов на их размещение;</li>
-  <li>Подготовка и согласование государственных статистических отчетов предприятий, в том числе форм 2-тп (воздух), 2-тп (отходы), 2-лс, 4-ос и др.</li>
-  <li>Разработка и выполнение программ производственного экологического контроля</li>
-  <li>Разработка деклараций безопасности гидротехнических сооружений.</li>
-  <li>Разработка и утверждение проектов санитарно-охранных зон.</li>
-  <li>Выполнение всех видов работ экологического содержания на действующих предприятиях</li>
-</ol>
+  <ol>
+    Мы выполняем следующие основные виды экологических исследований:
+    <li>Работы по исследованию фонового состояния окружающей природной среды с подготовкой и согласованием Отчета о фоновом состоянии окружающей природной среды.</li>
+    <li>Разработка программ и проектов экологического мониторинга окружающей природной среды.</li>
+    <li>Разработка экологических разделов в отчетах о результатах разведки месторождений с подсчетом запасов и ТЭО кондиций.</li>
+    <li>Разработка экологической части проектов разработки месторождений твердых полезных ископаемых.</li>
+    <li>Разработка нормативов предельно-допустимых выбросов загрязняющих веществ в атмосферный воздух, нормативов допустимых сбросов, проектов нормативов образования отходов и лимитов на их размещение;</li>
+    <li>Подготовка и согласование государственных статистических отчетов предприятий, в том числе форм 2-тп (воздух), 2-тп (отходы), 2-лс, 4-ос и др.</li>
+    <li>Разработка и выполнение программ производственного экологического контроля</li>
+    <li>Разработка деклараций безопасности гидротехнических сооружений.</li>
+    <li>Разработка и утверждение проектов санитарно-охранных зон.</li>
+    <li>Выполнение всех видов работ экологического содержания на действующих предприятиях</li>
+  </ol>
 
-<p class="fig"><img src="../../../../../../assets/eco-research/1.png" width="345"/>
-               <img src="../../../../../../assets/eco-research/2.png" width="455" />
-               <img src="../../../../../../assets/eco-research/3.png" width="350" /></p>
+  <p class="fig">
+    <img src="../../../../../../assets/eco-research/1.png" width="345" />
+    <img src="../../../../../../assets/eco-research/2.png" width="455" />
+    <img src="../../../../../../assets/eco-research/3.png" width="350" />
+  </p>
+</div>
