adding @ngx-gallery

--- a/GeoApp/ClientApp/src/app/user/components/home/home.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/home/home.component.html
@@ -19,3 +19,7 @@
     <button mat-button color="primary" class="my-dot">3</button>
     <button mat-button color="primary" class="my-dot">4</button>
 </div>
+
+<mat-divider></mat-divider>
+<br>
+<gallery id="ex1" style="height: 500px;" [items]="items" thumbPosition="left"></gallery>
