Add projects with mat-cards & gallery

--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-history/about-history.component.html
@@ -1,4 +1,4 @@
-<div class="text">
+<div class="common-text">
   <p>
     Подготовка к созданию компании АО <q>СИБГЕОТЕХ</q> началась в 2011 г,
     когда у нескольких нынешних руководителей общества возникла идея создать
