--- a/GeoApp/ClientApp/src/app/user/components/home/home.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/home/home.component.html
@@ -1,5 +1,4 @@
-
-<owl-carousel [options]="myOptions2"
+<owl-carousel [options]="carouselOptions"
               [carouselClasses]="['owl-theme', 'row', 'sliding']">
   <img src="../../assets/temp_pics/1.jpg" title="pict1" />
   <img src="../../assets/temp_pics/2.jpg" title="pict2" />
