--- a/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
@@ -1,5 +1,29 @@
 <div>
   <mat-card class="card">
+    <img mat-card-image src="../../../../assets/projects/accarag_1_.jpg" alt="Аккарагское">
+    <mat-card-content>
+      <p>
+        ТЭО временных разведочных кондиций с подсчетом запасов хромовых руд Аккаргинского месторождения Южного Урала 2015г
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="info-btn" mat-raised-button routerLink="/accarag">Подробнее</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="card">
+    <img mat-card-image src="../../../../assets/projects/accarag_1_.jpg" alt="Аккарагское">
+    <mat-card-content>
+      <p>
+        ТЭО временных разведочных кондиций с подсчетом запасов хромовых руд Аккаргинского месторождения Южного Урала 2015г
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="info-btn" mat-raised-button routerLink="/accarag">Подробнее</button>
+    </mat-card-actions>
+  </mat-card>
+  
+  <!--mat-card class="card">
     <img mat-card-image src="../../../../assets/projects/ornakul_1_.jpg" alt="Орнакул">
     <mat-card-content>
       <p>
@@ -87,5 +111,5 @@
     <mat-card-actions>
       <button mat-raised-button routerLink="/maein-ges-2">Подробнее</button>
     </mat-card-actions>
-  </mat-card>
+  </mat-card-->
 </div>
