1) routing to external file 2) projects routing rearrange

--- a/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
@@ -7,7 +7,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button class="info-btn" mat-raised-button routerLink="/accarag">Подробнее</button>
+      <button class="info-btn" mat-raised-button routerLink="accarag">Подробнее</button>
     </mat-card-actions>
   </mat-card>
 
@@ -22,7 +22,7 @@
       <button class="info-btn" mat-raised-button routerLink="/accarag">Подробнее</button>
     </mat-card-actions>
   </mat-card>
-  
+
   <!--mat-card class="card">
     <img mat-card-image src="../../../../assets/projects/ornakul_1_.jpg" alt="Орнакул">
     <mat-card-content>
