--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
@@ -1,5 +1,14 @@
-
-
+<div>
+  <mat-card class="card">
+    <div class="staff-image">
+      <!--img mat-card-image src="../../../../../../assets/sovluk.png"-->
+    </div>
+    <mat-card-content>
+      <p>Совлук Виктор Иванович</p>
+      <p><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></p>
+    </mat-card-content>
+  </mat-card>
+</div>
 <div class="art-postcontent" style="color: rgb(149, 149, 149); font-family: Arial, Helvetica, sans-serif;">
   <div style="text-align: center;">&nbsp;</div>
 
