--- a/GeoApp/ClientApp/src/app/app.component.css
+++ b/GeoApp/ClientApp/src/app/app.component.css
@@ -68,3 +68,13 @@ a {
   width: 300px;
   margin-top:170px;
 }
+
+.app-copyright {
+  position: absolute;
+  width: 100%;
+  color: #fff;
+  line-height: 40px;
+  font-size: 0.7em;
+  text-align: center;
+  bottom:0;
+}
