--- a/GeoApp/ClientApp/src/app/app.component.html
+++ b/GeoApp/ClientApp/src/app/app.component.html
@@ -34,6 +34,7 @@
     <div class="app-sidenav-content">
       <router-outlet></router-outlet>
     </div>
+    <p class="app-copyright">© Все права защищены. 2018 год. Studying Syndicate.</p>
   </mat-sidenav-content>
 </mat-sidenav-container>
 
