--- a/GeoApp/ClientApp/src/app/app.component.html
+++ b/GeoApp/ClientApp/src/app/app.component.html
@@ -3,38 +3,68 @@
     <button mat-button class="app-menu-button" (click)="sidenav.toggle()" title="Навигация">
       <mat-icon>menu</mat-icon>
     </button>
-    <a [routerLink]='["/"]'><img alt="" src="../assets/SibGeoTekh_logo.png" class="toolbar-logo" /></a>
+    <a [routerLink]='["/"]'><img alt="" src="../assets/SibGeoTekh_logo.png" class="toolbar-logo"/></a>
     <span class="app-nav-company">Акционерное общество «Геологические Технологии Сибири»</span>
     <span class="app-spacer"></span>
     <mat-icon>search</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 
-<mat-sidenav-container class="app-sidenav-container">
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="app-sidenav">
-    <mat-list>
-      <mat-list-item>
-        <span class="app-username">Имя пользователя</span>
-        <span class="app-spacer"></span>
-        <button mat-raised-button color="accent">Выход</button>
-      </mat-list-item>
+<div class="app-content-container">
+  <slideshow #slideshow
+             class="app-slideshow"
+             [imageUrls]="images"
+             [height]="height"
+             [minHeight]="minHeight"
+             [arrowSize]="arrowSize"
+             [showArrows]="showArrows"
+             [disableSwiping]="disableSwiping"
+             [autoPlay]="autoPlay"
+             [stopAutoPlayOnSlide]="stopAutoPlayOnSlide"
+             [debug]="debug"
+             [backgroundSize]="backgroundSize"
+             [backgroundPosition]="backgroundPosition"
+             [backgroundRepeat]="backgroundRepeat"
+             [showDots]="showDots"
+             [dotColor]="dotColor"
+             [showCaptions]="showCaptions"
+             [captionColor]="captionColor"
+             [captionBackground]="captionBackground"
+             [lazyLoad]="lazyLoad"
+             [hideOnNoSlides]="hideOnNoSlides">
+  </slideshow>
 
-      <mat-list-item *ngFor="let item of sideNavItems;">
-        <button
-          mat-button
-          color="primary"
-          [routerLink]="item.link"
-          (click)="sidenav.toggle()" >{{item.name}}</button>
-      </mat-list-item>
+  <mat-sidenav-container class="app-sidenav-container">
+    <mat-sidenav
+      #sidenav
+      mode="side"
+      [(opened)]="opened"
+      class="app-sidenav">
+      <mat-list>
+        <mat-list-item>
+          <span class="app-username">Имя пользователя</span>
+          <span class="app-spacer"></span>
+          <button mat-raised-button color="accent">Выход</button>
+        </mat-list-item>
 
-    </mat-list>
-  </mat-sidenav>
+        <mat-list-item *ngFor="let item of sideNavItems;">
+          <button
+            mat-button
+            color="primary"
+            [routerLink]="item.link"
+            (click)="sidenav.toggle()">{{item.name}}
+          </button>
+        </mat-list-item>
 
-  <mat-sidenav-content>
-    <div class="app-sidenav-content">
-      <router-outlet></router-outlet>
-    </div>
-    <p class="app-copyright">© Все права защищены. 2018 год. Studying Syndicate.</p>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+      </mat-list>
+    </mat-sidenav>
 
+    <mat-sidenav-content>
+      <div class="app-sidenav-content">
+        <router-outlet></router-outlet>
+      </div>
+      <p class="app-copyright">© Все права защищены. 2018 год. Studying Syndicate.</p>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+
+</div>
