mat card+ngfor staff

--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.css
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.css
@@ -6,16 +6,18 @@ p {
 
 .mat-card {
   width: 200px;
-  height: 200px
+  height: 300px;
+  display: inline-table;
+  margin: 5px;
+}
+
+.mat-card-header {
+  justify-content: center;
 }
 
 .mat-card-image {
-  height: 100px;
+  height: 200px;
   width: auto;
 }
 
-.staff-image {
-  background-image: url("../../../../../../assets/sovluk.png");
-  background-size: cover;
-}
 
