--- a/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/about/tabs/about-staff/about-staff.component.html
@@ -1,47 +1,11 @@
-<div>
-  <mat-card class="card">
-    <div class="staff-image">
-      <!--img mat-card-image src="../../../../../../assets/sovluk.png"-->
-    </div>
-    <mat-card-content>
-      <p>Совлук Виктор Иванович</p>
-      <p><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></p>
-    </mat-card-content>
-  </mat-card>
-</div>
-<div class="art-postcontent" style="color: rgb(149, 149, 149); font-family: Arial, Helvetica, sans-serif;">
-  <div style="text-align: center;">&nbsp;</div>
+<mat-card class="card" *ngFor="let staff of staffItems">
+  <mat-card-header>
+    <img mat-card-image src="{{staff.image}}">
+  </mat-card-header>
+  <mat-card-content>
+    <p>{{staff.name}}</p>
+    <p><strong>{{staff.position}}</strong></p>
+  </mat-card-content>
+</mat-card>
 
-  <div style="text-align: center;">
-    <p>&nbsp;</p>
 
-    <table>
-      <tbody>
-        <tr>
-          <td><a class="lb2" src="../../../../../../assets/sovluk.png" style="margin: 0px; padding: 0px; color: rgb(44, 70, 148); text-decoration-line: none;"><img alt="" src="http://geotehn.ru/sites/default/files/resize/sovluk-100x152.png" style="border:0px; font-family:arial,helvetica,sans-serif; height:152px; margin:3px; width:100px" /></a></td>
-          <td>
-            <p><strong>Генеральный директор УК &quot;СибГеоТех&quot;</strong></p>
-
-            <p>Совлук Виктор Иванович</p>
-          </td>
-        </tr>
-        <tr>
-          <td>&nbsp;</td>
-          <td>
-            <p><strong>Директор отдела инженерных изысканий</strong></p>
-
-            <p>Хомяков Андрей Сергеевич</p>
-          </td>
-        </tr>
-        <tr>
-          <td><img alt="" src="../../../../../../assets/asovluk.png" style="border:1px solid; height:152px; margin:3px; width:100px" /></td>
-          <td>
-            <p><strong>Директор отдела геологоразведочных работ</strong></p>
-
-            <p>Совлук Александр Викторович</p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
