--- a/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
@@ -1,27 +1,20 @@
 <div>
-  <mat-card class="card">
-    <img mat-card-image src="../../../../assets/projects/accarag_1_.jpg" alt="Аккарагское">
+  <mat-card class="card" *ngFor="let proj of itemsProject">
+    <mat-card-header>
+      <img mat-card-image src="{{proj.image}}" alt={{proj.name}}>
+    </mat-card-header>
+
     <mat-card-content>
       <p>
-        ТЭО временных разведочных кондиций с подсчетом запасов хромовых руд Аккаргинского месторождения Южного Урала 2015г
+        {{proj.text}}
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button class="info-btn" mat-raised-button routerLink="accarag">Подробнее</button>
+      <button class="info-btn" mat-raised-button routerLink={{proj.rout}}>Подробнее</button>
     </mat-card-actions>
   </mat-card>
 
-  <mat-card class="card">
-    <img mat-card-image src="../../../../assets/projects/accarag_1_.jpg" alt="Аккарагское">
-    <mat-card-content>
-      <p>
-        ТЭО временных разведочных кондиций с подсчетом запасов хромовых руд Аккаргинского месторождения Южного Урала 2015г
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button class="info-btn" mat-raised-button routerLink="/accarag">Подробнее</button>
-    </mat-card-actions>
-  </mat-card>
+
 
   <!--mat-card class="card">
     <img mat-card-image src="../../../../assets/projects/ornakul_1_.jpg" alt="Орнакул">
