--- a/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
+++ b/GeoApp/ClientApp/src/app/user/components/projects/projects.component.html
@@ -9,7 +9,7 @@
     </p>
   </mat-card-content>
   <mat-card-actions>
-    <button class="info-btn" mat-raised-button routerLink={{proj.rout}}>Подробнее</button>
+    <button class="info-btn" mat-raised-button routerLink={{proj.route}}>Подробнее</button>
   </mat-card-actions>
 </mat-card>
 
