--- a/GeoApp/ClientApp/src/app/app.component.css
+++ b/GeoApp/ClientApp/src/app/app.component.css
@@ -12,10 +12,6 @@
   font-size: 16px;
 }
 
-.app-content-container {
-  position: relative;
-}
-
 .app-sidenav-container {
   position: absolute;
   min-height: 100% !important;
@@ -55,7 +51,7 @@ mat-list-item .mat-button {
 mat-sidenav.mat-sidenav {
   top: 64px;
   background-color: #fafafa;
-  box-shadow: 6px 0 6px rgba(0,0,0,.1);
+  box-shadow: 6px 0 6px rgba(0, 0, 0, .1);
 }
 
 mat-toolbar.mat-toolbar mat-toolbar-row {
@@ -81,7 +77,7 @@ a {
 .sidenav-logo {
   height: 300px;
   width: 300px;
-  margin-top:170px;
+  margin-top: 170px;
 }
 
 .app-copyright {
@@ -91,5 +87,5 @@ a {
   line-height: 40px;
   font-size: 0.7em;
   text-align: center;
-  bottom:0;
+  bottom: 0;
 }
